build: 🔧 support java11 fix: 🐛 Repeat correct track recognition questions